# dbt_demo

./: dbt_project.yml  pyproject.toml
.github/workflow/: ci.yml
.github/workflows/: deploy_to_prod.yml
.guthub/PULL_REQUEST_TEMPLATE/: pull_request_template.md
macros/: usd_to_gbp.sql
models/marts/: customers.sql  customers_incremental.sql  orders.sql  orders_incremental.sql
models/staging/payment_app/: stg_payment_app__models.yml  stg_payment_app__sources.yml
models/staging/tech_store/: stg_tech_store__cities.sql  stg_tech_store__models.yml  stg_tech_store__sources.yml
seeds/: sale_dates.csv
